<resources>
    <string name="app_name">RACM</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono de casa</string>
    <string name="direccion">Dirección</string>
    <string name="guardar">Guardar</string>
    <string name="definir_direccion">Definir Dirección</string>
    <string name="confirmar_direccion">Confirmar Dirección</string>
    <string name="nombrePD">Mi Nombre</string>
    <string name="telefonoPD">Mi Teléfono</string>
    <string name="hintNombrePD">Escribe tu nombre</string>
    <string name="hintTelefonoPD">Escribe tu teléfono</string>
    <string name="direccionPD">Mi Dirección</string>
    <string name="hintDireccionPD">Escribe tu dirección</string>
    <string name="cambiarFotoCF">Cambiar Foto</string>
    <string name="guardarCF">Guardar</string>
    <string name="buscar">Buscar Contacto</string>
    <string name="title_activity_navegar_casa">Map</string>
    <string name="telefonoCelular">Teléfono celular</string>
</resources>
