<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="2dp"
            app:tabGravity="fill"
            app:tabMode="scrollable"
            android:layout_alignBottom="@+id/toolbar3"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/contactos"
                android:text="Contactos"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/home"
                android:text="Casa"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/sos"
                android:text="Ayuda"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/perfil"
                android:text="Perfil"/>
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/user"
            android:id="@+id/image_fotoEP"
            android:layout_weight="0.17" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.26" />

        <TextView
            android:text="@string/nombre"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_nombreEP" />

        <EditText
            android:text="Luisa Méndez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_nombreEP" />

        <TextView
            android:text="@string/telefono"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_telefonoEP" />

        <EditText
            android:text="81853524"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_telefonoEP" />

        <TextView
            android:text="@string/direccion"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_direccionEP" />

        <EditText
            android:text="Avenida Siempre Viva 742"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_direccionEP" />

        <Button
            android:text="@string/confirmar_direccion"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"
            android:id="@+id/button_ubicacionEP" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17" />

        <Button
            android:text="@string/guardar"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:id="@+id/button_guardarEP" />
    </LinearLayout>

</LinearLayout>
