<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:name="itesm.mx.racm.MenuFragment"
        android:id="@+id/fragment_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_menu"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/image_modificarPD"
            android:layout_width="92dp"
            android:layout_height="75dp"
            android:src="@drawable/modified"
            android:layout_weight="0.07"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/user"
            android:id="@+id/image_fotoPD"
            android:layout_weight="0.37" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <TextView
            android:text="@string/nombrePD"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_1" />

        <TextView
            android:text="Verónica Meneses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_nombrePD"
            android:textSize="20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />

        <TextView
            android:text="@string/telefonoPD"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_2" />

        <TextView
            android:text="818543342"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_telefonoPD"
            android:textSize="20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10" />
        <TextView
            android:text="@string/direccionPD"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_3" />


        <TextView
            android:text="Avenida Siempre Viva, 742"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_"
            android:textSize="20dp"/>

    </LinearLayout>
</LinearLayout>

